UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/Shipping_Device__c.object-meta.xml
<CustomObject>
    <label>Shipping Device</label>
    <nameField>
        <label>Devices</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>