UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <label>Allocated</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>