UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <formula>Order_Product__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Name</label>
    <type>Text</type>
</CustomField>