UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Shipping Devices</relationshipLabel>
    <relationshipName>Shipping_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>