UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Remaining__c.field-meta.xml
<CustomField>
    <fullName>Remaining__c</fullName>
    <formula>Total_Devices__c - Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>