UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Ship_Count__c.field-meta.xml
<CustomField>
    <fullName>Ship_Count__c</fullName>
    <label>Ship Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>