UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Shipping_Information__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Information__c</fullName>
    <label>Shipping Information</label>
    <referenceTo>ShippingInformation__c</referenceTo>
    <relationshipLabel>Shipping Devices</relationshipLabel>
    <relationshipName>Shipping_Devices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>