UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/SNE__c.field-meta.xml
<CustomField>
    <fullName>SNE__c</fullName>
    <label>SNE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>