UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/SNE_Code__c.field-meta.xml
<CustomField>
    <fullName>SNE_Code__c</fullName>
    <formula>IF(
    NOT(ISBLANK( Order_Product__r.SNE_Code_MRC__c)), 
    Order_Product__r.SNE_Code_MRC__c,
    IF(
        NOT(ISBLANK(Order_Product__r.SNE_Code_OTC__c)),
        Order_Product__r.SNE_Code_OTC__c,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SNE_Code</label>
    <type>Text</type>
</CustomField>