UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>