UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Total_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated__c</fullName>
    <label>Total Allocated</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>