UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Total_Devices__c.field-meta.xml
<CustomField>
    <fullName>Total_Devices__c</fullName>
    <formula>Order_Product__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Devices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>