UCF-APR2.4/ftr main/force-app/main/default/objects/Shipping_Device__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Device_Type__c</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>